kubernetes/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: chat-app
  labels:
    app: chatapp
