kubernetes/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: chatapp-backend
  namespace: chat-app
  labels:
    app: chatapp
    feature: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      feature: backend
  template:
    metadata:
      labels:
        app: chatapp
        feature: backend
    spec:
      containers:
      - name: chatapp-backend
        image: saadzahid/fullstack-chatapp-backend:v1
        ports:
        - containerPort: 5001
      readinessProbe:
        httpGet:
          path: /health
          port: 5001
        initialDelaySeconds: 15
        periodSeconds: 10

      livenessProbe:
        httpGet:
          path: /health
          port: 5001
        initialDelaySeconds: 30
        periodSeconds: 10
