kubernetes/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapp-mongodb
  namespace: chat-app
  labels:
    feature: database
spec:
  replicas: 1
  selector:
    matchLabels:
      feature: database
  template:
    metadata:
      labels:
        feature: database
    spec:
      containers:
      - name: mongodb
        image: mongo:4.4
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongodb-data
