kubernetes/database-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: chatapp-mongodb
  namespace: chatapp
  labels:
    app: chatapp
    feature: database
spec:
  selector:
    matchLabels:
      feature: database
  serviceName: "chatapp-mongodb"
  replicas: 3
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: chatapp
        feature: database
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongodb
        image: mongo:4.4
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
