kubernetes/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: chat-app
  labels:
    app: chatapp
    feature: backend
spec:
  selector:
    feature: backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
      nodePort: 30001
  type: NodePort
