kubernetes/database-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: chat-app
spec:
  selector:
    feature: database
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
