kubernetes/frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: chat-app
spec:
  selector:
    feature: frontend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
      nodePort: 30002
  type: NodePort
